--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -7,13 +7,13 @@ body {
 
 #header {
     width: 100%;
-    height: 70px;
-    background-color: #333333;
+    height: 90px;
+    background-color: #FFCC00;
 }
 
 #content {
-    width: 94%;
-    margin-top: 15px;
+    width: 90%;
+    margin-top: 25px;
     padding-left: 3%;
 }
 
@@ -21,8 +21,8 @@ h1 {
     width: 94%;
     padding-top: 17px;
     padding-left: 3%;
-    font-size: 24px;
-    color: #eeeeee;
+    font-size: 40px;
+    color: #000000;
 }
 
 h2 {
@@ -40,13 +40,27 @@ p {
     margin-bottom: 15px;
 }
 
-a {
-    text-decoration: none;
-    color: #24738e;
+a.title_link{
+	text_decoration:none;
+}
+
+a:link.title_link{
+	font-size:24px;
+	color: #FFFFFF;
+	background-color:#00CC33;
+    text-decoration:none;
+}
+
+a:hover.title_link{
+	text-decoration:underline;
+}
+
+a:visited{
+	color: #000080;
 }
 
 table, tr, th, td {
-    border: 1px solid #cccccc;
+    border: 4px solid #cccccc;
 }
 
 table {
@@ -57,6 +71,7 @@ table {
 th {
     width: 26%;
     padding: 10px 2%;
+    font-weight:bold;
 }
 
 td {
@@ -64,10 +79,17 @@ td {
     padding: 10px 2%;
 }
 
+
+
 button {
     font-size: 14px;
     padding: 5px 10px;
 }
+
+.link_cell {
+    background-color:#00CC33;
+}
+
 
 #footer {
     text-align: center;
@@ -92,3 +114,4 @@ button {
     color: #721c24;
     background-color: #f8d7da;
 }
+
